# strands-rag-search

./: .gitignore  CLAUDE.md  README.md  agent.py  docker-compose.yml  generate_embeddings.py  package-lock.json  pyproject.toml  results.json  run_orchestrator.py  scrapy.cfg  test.js  websocket-client.js
content_agent/: agent.py
customer_agent/: agent.py
html_downloads/: url_mapping.json
html_downloads/ibx.com/: contact-us.html  find-a-plan_employers.html  find-a-plan_employers_large-business.html  find-a-plan_employers_small-business.html  find-a-plan_employers_third-party-administration.html  find-a-plan_employers_why-ibx.html  find-a-plan_individuals-and-families.html  find-a-plan_individuals-and-families_faq.html  find-a-plan_individuals-and-families_health-insurance-basics.html  find-a-plan_individuals-and-families_how-to-enroll.html  find-a-plan_individuals-and-families_ibx-health-plans.html  find-a-plan_individuals-and-families_tax-credit-calculator.html  get-care_find-doctors-and-health-care-providers.html  login.html  www.ibx.com.html
infra/: lambda.tf  main.tf
local_model/: model.py
open_rag_search/: items.py  pipelines.py  settings.py
open_rag_search/spiders/: web_crawler.py
orchestrator_agent/: agent.py
